--- a/css/index.css
+++ b/css/index.css
@@ -8,7 +8,7 @@ body {
 
 #display {
     display: grid;
-    grid-template-columns: 1fr 50%;
+    grid-template-columns: 1fr 1fr;
     grid-template-rows: 300px 275px;
 }
 
@@ -33,9 +33,9 @@ body {
 }
 
 #bottom-left {
+    display: grid;
     grid-column: 1/2;
     grid-row: 2/3;
-    width: 500px;
     font-family: 'Abhaya Libre', serif;
     font-size: 1.25rem;
     font-weight: 800;
@@ -44,10 +44,13 @@ body {
     opacity: 60%;
 }
 
+#bottom-left p{
+    width: 500px;
+}
+
 header button {
-    grid-column: 1/2;
-    grid-row: 3/4;
     border: none;
+    width: 250px;
     height: 60px;
     padding: 5px 40px;
     border-radius: 10px;
@@ -86,8 +89,10 @@ hr {
 
 #partner{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 75px;
+    row-gap: 25px;
+    justify-content: space-evenly;
 }
 
 .partner_box {
@@ -104,18 +109,18 @@ hr {
 
 .partner_box img:nth-of-type(1), 
 .partner_box img:nth-of-type(2) {
-    max-width: 50%;
+    max-width: 70%;
 }
 
 .partner_box p {
-    margin: auto 10% 0 5%;
+    margin: auto 10% 0 10%;
     color: #1F3F68;
     font-size: 2rem;
     text-align: left;
 }
 
 .partner_box p:nth-of-type(1) {
-    height: 100px;
+    height: 125px;
 }
 
 .partner_box p:nth-of-type(2) {
@@ -216,6 +221,7 @@ hr {
 }
 
 #clientele p{
+    padding: 0 5%;
     grid-column: 1/3;
     grid-row: 2/3;
     font-family: 'Abril Fatface', cursive;
@@ -270,12 +276,14 @@ hr {
     transition: all 300ms ease-out;
     transform: translateY(30px);
 }
+
 .profession1 .title {
     font-size: 2em;
     font-weight: bold;
     text-transform: uppercase;
     opacity: 0;
 }
+
 .profession1:hover .title,
 .profession1:focus .title {
     opacity: 1;
@@ -321,7 +329,100 @@ hr {
     font-size: 1.5em;
 }
 
+/* **MEDIA QUERIES** */
 
+@media screen and (max-width: 479px) {
+    nav {display: grid; justify-items: center;}
+    .logo {padding: 0; justify-self: center;}
+    ul {padding: 0;}
+    .nav-links {margin: 15px 0; justify-content: center;}
+    nav li {font-size: 1rem;padding: 0 10px;}
+    #display {
+        grid-template-columns: 100vw;
+        grid-template-rows: 200px 225px;}
+    #display img {display: none;}
+    #display p {padding:0}
+    #top-left {font-size: 2rem; grid-row: 1/2; grid-column: 1/3; text-align: center;}
+    #bottom-left {grid-row: 2/3; grid-column: 1/3; justify-items: center;}
+    #bottom-left p {padding: 0 25px; text-align: center; width: fit-content;}
+    header button {margin: auto;}
+    main {padding-top: 0}
+    main h1 {padding-top: 0;}
+    #video { width: 90vw; height: 245px;}
+    #info3 {text-align: center;}
+    #client0 {display: none;}
+    footer{ display: flex; flex-direction: column; text-align: center;}
+    #footer1a { padding: 0;}
+    #footer1b button {margin: 25px 0;}
+    #footer2 {margin: 0;}
+    #footer3 {margin: 0;}
+    #links {justify-content: center;}
+    #copy {margin-top: 25px;}
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
+    nav {display: grid;}
+    .logo {justify-self: center;}
+    ul {padding: 0;}
+    .nav-links {margin: 15px 0; justify-content: center;}
+    nav li {font-size: 1rem;padding: 0 10px;}
+    #display {
+        grid-template-columns: 100vw;
+        grid-template-rows: 200px 225px;}
+    #display img {display: none;}
+    #display p {padding:0}
+    #top-left {font-size: 2rem; grid-row: 1/2; grid-column: 1/3; text-align: center;}
+    #bottom-left {grid-row: 2/3; grid-column: 1/3; justify-items: center;}
+    #bottom-left p {padding: 0 25px; width: fit-content; text-align: center;}
+    header button {margin: auto;}
+    main {padding-top: 0}
+    main h1 {padding-top: 0;}
+    #video { width: 90vw; height: 245px;}
+    #client1 {grid-template-columns: 300px;}
+    footer{ display: flex; flex-direction: column; text-align: center;}
+    #footer1a { padding: 0;}
+    #footer1b button {margin: 25px 0;}
+    #footer2 {margin: 0;}
+    #footer3 {margin: 0;}
+    #links {justify-content: center;}
+    #copy {margin-top: 25px;}
+}
+
+@media screen and (min-width: 768px) and (max-width: 959px){
+    .logo {padding-left: 10%; width:175px}
+    nav li {font-size: 1.2rem; padding: 0 15px;}
+    #display {grid-template-columns: 45% 55%;}
+    #display p {padding:0 5%}
+    #top-left {font-size: 2rem;}
+    #bottom-left p {padding: 0 5%; width: 400px}
+    #bottom-left {width: 90%;}
+    header button {margin-left: 20px;}
+    main {padding: 0;}
+    #video { width: 70vw; height: 305px;}
+    #client1 {grid-template-columns: repeat(2,300px);}
+}
+
+@media screen and (min-width: 960px) and (max-width: 1023px){
+    .logo {padding-left: 15%; width: 200px}
+    nav li {font-size: 1.4rem;}
+    #display {grid-template-columns: 45% 55%;}
+    #top-left {font-size: 2.1rem; padding: 0 10%;}
+    #bottom-left p {padding: 0 10%; width: 400px}
+    main {padding-top: 25px;}
+    #partner {grid-gap: 50px;}
+    #contract {grid-gap: 0;}
+    #video {width: 70vw; height: 380px;}
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1199px){
+    .logo {padding-left: 15%; width: 200px}
+    #display p {padding-left: 10%}
+    #top-left {font-size: 2.3rem;}
+    main {padding-top: 25px;}
+    #partner {grid-gap: 50px;}
+    #contract {grid-gap: 0;}
+    #video {width: 70vw; height: 405px;}
+}
 
 
 
