--- a/css/nav&footer.css
+++ b/css/nav&footer.css
@@ -2,7 +2,7 @@
 .test {
     grid-column: 1/3;
     grid-row: 1/3;
-    height: 250px;
+    height: 1000px;
     width: 100%;
     background-color: lightgrey;
     text-align: center;
@@ -32,7 +32,8 @@ nav li {
     font-size: 1.5rem;
 }
 
-nav a {
+nav a:link {
+    color: #316099;
     text-decoration: none;
 }
 
